constructed contacts Form index.js / fixed nav collapse / changed Nav to Navigation

--- a/src/components/Navigation/assets/styles/Hero.css
+++ b/src/components/Navigation/assets/styles/Hero.css
@@ -15,7 +15,7 @@
 
 .nav li {
   margin-left: 3rem;
-  display: inline-flex
+  display: inline-flex;
 } 
 
 .color .active a {
